// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResizeIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ResizeIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15.146 4.178l.707.707-11 11-.707-.707 11-11zM15.146 8.178l.707.707-7 7-.707-.707 7-7zM15.146 12.178l.707.707-3 3-.707-.707 3-3z"
  />
</Icon>
`;

exports[`ResizeIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ResizeIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15.146 4.178l.707.707-11 11-.707-.707 11-11zM15.146 8.178l.707.707-7 7-.707-.707 7-7zM15.146 12.178l.707.707-3 3-.707-.707 3-3z"
  />
</Icon>
`;

exports[`ResizeIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ResizeIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15.146 4.178l.707.707-11 11-.707-.707 11-11zM15.146 8.178l.707.707-7 7-.707-.707 7-7zM15.146 12.178l.707.707-3 3-.707-.707 3-3z"
  />
</Icon>
`;
